# kinematics_calibration

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  relative_position.yaml
3d_printed_assets/: calibration_head.STL  calibration_holder_l.STL  calibration_holder_r.STL
assets/: gen3lite.urdf  iiwa14.urdf  iiwa14_epfl.urdf  panda.urdf  vx300s.urdf
calibrate_fk/: model_comparison.py  parameter_optimizer.py  plot_planar_3link_arm.py  utils.py
calibrated_urdf/: .gitignore
calibrated_urdf/panda_2/: panda.urdf
calibrated_urdf/panda_3/: panda.urdf  panda_calibrated.urdf
calibrated_urdf/panda_4/: panda.urdf  panda_calibrated.urdf
config_optimizer/: gen3lite.yaml  iiwa14.yaml  panda.yaml  panda_plus_bota.yaml  vx300s.yaml
data/: README.md
examples/: .gitignore  create_plots.py  eval_model.py  intermediat_solutions.py  run_optimizer.py  run_optimizer_gui.py
ros2_ws/: .gitignore
ros2_ws/src/calibration_tools/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/calibration_tools/calibration_tools/: joint_state_recorder.py  record_joint_states_dataset.py
ros2_ws/src/calibration_tools/launch/: record_joint_states.launch.py
ros2_ws/src/calibration_tools/scripts/: joint_state_recorder.py
scripts/: bimanual_calibration.py  compare_models.py  comparison_with_sota.py  compute_improved_performance.py  convert_panda_urdf.py  create_plots.py  eval_model.py  generate_complete_analysis.py  generate_learning_curve.py  generate_overlay.py  generate_test_data.py  plot_joint_distribution.py  run_optimizer.py  statistical_analysis_many_to_one.py  statistical_analysis_one_to_many.py
stl/: MUKCa_tool.stl  franka_tool.stl  kinova_tool.stl  kinova_tool_lock.stl  kuka_tool.stl  viper_tool.stl
urdf/: gen3lite.urdf  iiwa14.urdf  iiwa14_epfl.urdf  nlink_3.urdf  nlink_7.urdf  panda.urdf  panda_plus_bota.urdf  vx300s.urdf
(+228 files in other folders)
